# EMBL-Variant-Dashboard

./: main.py  pyproject.toml
data/processed/: CYP2D6-pop-vars.parquet  CYP2D6-variants.parquet  HLA-A-pop-vars.parquet  HLA-A-variants.parquet  HLA-B-pop-vars.parquet  HLA-B-variants.parquet
notebooks/: data-download.ipynb  variant-analysis.ipynb
notebooks/html/: data-download.html
